<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_fragment_title"
                android:textSize="43sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="35dp"
                android:layout_marginStart="20dp"/>

            <androidx.appcompat.widget.SearchView
                android:id="@+id/home_searchview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/searchview_background"
                app:queryHint="Which service do you need?"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:elevation="10dp"
                app:layout_constraintTop_toBottomOf="@+id/home_title"/>

            <ImageView
                android:id="@+id/home_header_image"
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:scaleType="fitCenter"
                android:src="@drawable/header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/image_cardView"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintTop_toBottomOf="@+id/home_header_image"
                app:cardCornerRadius="10dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/shutterstock" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:background="@drawable/searchview_background"
                        android:gravity="center"
                        android:text="@string/home_weddingImage_text"
                        android:textSize="27sp"
                        android:layout_margin="10dp"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:background="@color/main_green">

                        <TextView
                            android:id="@+id/top_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toTopOf="@+id/bottom_text"
                            android:text="@string/home_weddingImage_bottom_title"
                            android:gravity="left"
                            tools:ignore="RtlHardcoded"
                            android:textSize="15sp"
                            android:layout_margin="10dp"
                            android:textColor="@color/white"
                            android:alpha="0.75"/>
                        <TextView
                            android:id="@+id/bottom_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:text="@string/home_weddingImage_bottom_text"
                            android:gravity="left"
                            tools:ignore="RtlHardcoded"
                            android:textSize="19sp"
                            android:layout_margin="10dp"
                            android:textColor="@color/white"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/home_all_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_services"
                app:layout_constraintTop_toBottomOf="@+id/image_cardView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/service_recyclerview_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_all_service"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/service_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
                <ImageView
                    android:id="@+id/home_service_error_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/error"
                    android:scaleType="fitCenter"
                    android:visibility="invisible"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <ProgressBar
                    android:id="@+id/home_service_error_progressBar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:visibility="invisible"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:indeterminateTint="@color/main_green"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/home_popular_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_days"
                app:layout_constraintTop_toBottomOf="@+id/service_recyclerview_layout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/popular_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/home_popular_service"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/popular_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <ImageView
                    android:id="@+id/popular_service_error_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/error"
                    android:scaleType="fitCenter"
                    android:visibility="invisible"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <ProgressBar
                    android:id="@+id/popular_service_error_progressBar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:visibility="invisible"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:indeterminateTint="@color/main_green"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/home_blog_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latest_blog"
                app:layout_constraintTop_toBottomOf="@+id/popular_layout"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:textSize="21sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/blog_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/home_blog_service"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/blog_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

                <ImageView
                    android:id="@+id/blog_service_error_image"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:src="@drawable/error"
                    android:scaleType="fitCenter"
                    android:visibility="invisible"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
                <ProgressBar
                    android:id="@+id/blog_service_error_progressBar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:visibility="invisible"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:indeterminateTint="@color/main_green"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>